# PySvn

./: publish.cmd  pyproject.toml
svn/: common.py  constants.py  local.py
